# Sys-Panteon

./: .gitignore  ENGRAM.md  PRD.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: makefile.yml  windows-makefile.yml
src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/layout/: MainLayout.tsx
src/components/shared/: EntidadFormTabs.tsx  EntidadSecciones.tsx  VecinasSheet.tsx
src/components/ui/: alert-dialog.tsx  alert.tsx  badge.tsx  button.tsx  card.tsx  color-picker.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  separator.tsx  sheet.tsx  table.tsx  tabs.tsx
src/db/: schema.sql
src/features/auth/: AuthContext.tsx  GestionUsuarios.tsx  Login.tsx  ProtectedRoute.tsx  service.ts
src/features/busqueda/: BusquedaGlobalDialog.tsx  service.ts
src/features/configuracion/: Configuracion.tsx  service.ts
src/features/fosas/: FosaDetalle.tsx  FosaForm.tsx  Fosas.tsx  NuevaGaveta.tsx  service.ts
src/features/gavetas/: GavetaDetalle.tsx  Gavetas.tsx  service.ts
src/features/import-export/: DevToolsPanel.tsx  ImportExportButtons.tsx  dev-tools.ts  excel.ts  importar.ts
src/features/lineas/: LineaDetalle.tsx  Lineas.tsx  NuevaLinea.tsx  service.ts
src/features/memorandums/: MemorandumDialog.tsx  (+3 more)
src/hooks/: useTheme.ts
src/lib/: auth.ts  backup.ts  boot.ts  db.ts  utils.ts
src/pages/: Diagnostico.tsx  Inicio.tsx
src/types/: index.ts
(+11 files in other folders)
